--- a/Assingment.html
+++ b/Assingment.html
@@ -12,13 +12,14 @@
     <!-- <script src="ATM.js"></script> -->
     <!-- <script src="arrays.js"></script> -->
     <!-- <script src="Percentage.js"></script> -->
-    <script src="marksintograde.js"></script>
+    <!-- <script src="marksintograde.js"></script> -->
+    <script src = "Boys-vs-girls.js"></script>
     <title>1st JavaScript Assigment - 1</title>
 </head>
 
 <body>
 
-    <h1> This HTML file is for Jave Script Learning assingments </h1>
+    <h1 color = blue > This HTML file is for Jave Script Learning assingments </h1>
 
     
 </html>
